--- a/src/CB/WarehouseBundle/Resources/views/Default/index.html.twig
+++ b/src/CB/WarehouseBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,34 @@
-Hello {{ name }}!
+<h1>Warehouse basic operations</h1>
+<ul>
+    <li><b>Add stock</b> into a location or a container. <i>Note that if there is another stock into the container/location with the same attributes, the new stock will merge with the existing adding its quantities.</i></li>
+    <li><b>Inc/Dec stock</b> to increment or decrement the stock quantity. <i>Note that this option is the best to increment or reduce stock but with add and delete options it can be possible too.</i></li>
+    <li><b>Modify stock attributes.</b> <i>Note that the location or quantity can't change with this option, instead use move stock or inc/dec or add or delete stock.</i></li>
+    <li><b>Move stock</b> from one location/container to another.</li>
+    <li><b>Delete stock</b> <i>Note that can delete all the stock or a part. With this can reduce the quantity like the inc/dec stock option.</i></li>
+</ul>
+
+<h1>Warehouse map</h1>
+<table>
+    <tbody>
+        <tr>
+            <th>Loaction</th>
+            <th>Container</th>
+            <th>Stock</th>
+        </tr>
+        <tr>
+            <th>MUE-EXP</th>
+            <th>000000000000000010</th>
+            <th>Product A, 10 units</th>
+        </tr>
+        <tr>
+            <th>MUE-EXP</th>
+            <th>000000000000000010</th>
+            <th>Product B, 5 units</th>
+        </tr>
+        <tr>
+            <th>MUE-EXP</th>
+            <th>000000000000000012</th>
+            <th>Product C, 15 units</th>
+        </tr>
+    </tbody>
+</table>
