--- a/src/CB/WarehouseBundle/Resources/views/Product/show.html.twig
+++ b/src/CB/WarehouseBundle/Resources/views/Product/show.html.twig
@@ -30,12 +30,20 @@
                 <td>{{ entity.lotRequiredInExpedition }}</td>
             </tr>
             <tr>
+                <th>Lot Mask</th>
+                <td>{{ entity.lotMask }}</td>
+            </tr>
+            <tr>
                 <th>Snrequiredinreception</th>
                 <td>{{ entity.snRequiredInReception }}</td>
             </tr>
             <tr>
                 <th>Snrequiredinexpedition</th>
                 <td>{{ entity.snRequiredInExpedition }}</td>
+            </tr>
+            <tr>
+                <th>SN Mask</th>
+                <td>{{ entity.snMask }}</td>
             </tr>
             <tr>
                 <th>Isactive</th>
