--- a/src/CB/WarehouseBundle/Resources/views/Default/index.html.twig
+++ b/src/CB/WarehouseBundle/Resources/views/Default/index.html.twig
@@ -4,41 +4,51 @@
         <a href="{{ path('stock_new') }}"><b>Add stock</b></a> into a location or a container. <i>Note that if there is another stock into the container/location with the same attributes, the new stock will merge with the existing adding its quantities.</i>
     </li>
     <li>
-        <a href="{{ path('stock_edit_qtty') }}"><b>Inc/Dec stock</b></a> to increment or decrement the stock quantity. <i>Note that this option is the best to increment or reduce stock but with add and delete options it can be possible too.</i>
+        <b>Inc/Dec stock</b> to increment or decrement the stock quantity. <i>Note that this option is the best to increment or reduce stock but with add and delete options it can be possible too.</i>
     </li>
     <li>
-        <a href="{{ path('stock_edit') }}"><b>Modify stock attributes.</b></a> <i>Note that the location or quantity can't change with this option, instead use move stock or inc/dec or add or delete stock.</i>
+        <b>Modify stock attributes</b>. <i>Note that the location or quantity can't change with this option, instead use move stock or inc/dec or add or delete stock.</i>
     </li>
     <li>
-        <a href="{{ path('stock_move') }}"><b>Move stock</b></a> from one location/container to another.
+        <b>Move stock</b> from one location/container to another.
     </li>
     <li>
-        <a href="{{ path('stock_delete') }}"><b>Delete stock</b></a> <i>Note that can delete all the stock or a part. With this can reduce the quantity like the inc/dec stock option.</i>
+        <b>Delete stock</b> <i>Note that can delete all the stock or a part. With this can reduce the quantity like the inc/dec stock option.</i>
     </li>
 </ul>
 
 <h1>Warehouse map</h1>
-<table>
-    <tbody>
+<table class="records_list">
+    <thead>
         <tr>
             <th>Loaction</th>
             <th>Container</th>
             <th>Stock</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
+    </thead>
+    <tbody>
+    {% for entity in entities %}
         <tr>
-            <th>MUE-EXP</th>
-            <th>000000000000000010</th>
-            <th>Product A, 10 units</th>
+            <td>
+                {% if entity.getLocation() %}
+                    {{ entity.getLocation() }}
+                {% endif %}
+            </td>
+            <td>
+                {% if entity.getContainer() %}
+                    {{ entity.getContainer() }}
+                {% endif %}
+            </td>
+            <td>Stock {{ entity }}</td>
+            <td><a href="{{ path('stock_edit_qtty', { 'id': entity.id }) }}">Inc/Dec</td>
+            <td><a href="{{ path('stock_edit', { 'id': entity.id }) }}">Edit</a></td>
+            <td><a href="{{ path('stock_move', { 'id': entity.id }) }}">Move</a></td>
+            <td><a href="{{ path('stock_delete', { 'id': entity.id }) }}">Delete</a></td>
         </tr>
-        <tr>
-            <th>MUE-EXP</th>
-            <th>000000000000000010</th>
-            <th>Product B, 5 units</th>
-        </tr>
-        <tr>
-            <th>MUE-EXP</th>
-            <th>000000000000000012</th>
-            <th>Product C, 15 units</th>
-        </tr>
+    {% endfor %}
     </tbody>
 </table>
