--- a/src/CB/WarehouseBundle/Resources/views/Default/index.html.twig
+++ b/src/CB/WarehouseBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,7 @@
 <h1>Warehouse basic operations</h1>
 <ul>
     <li>
-        <a href="{{ path('stock_new') }}"><b>Add stock</b></a> into a location or a container. <i>Note that if there is another stock into the container/location with the same attributes, the new stock will merge with the existing adding its quantities.</i>
+        <b>Add stock</b> into a location or a container. <i>Note that if there is another stock into the container/location with the same attributes, the new stock will merge with the existing adding its quantities.</i>
     </li>
     <li>
         <b>Inc/Dec stock</b> to increment or decrement the stock quantity. <i>Note that this option is the best to increment or reduce stock but with add and delete options it can be possible too.</i>
@@ -18,6 +18,7 @@
 </ul>
 
 <h1>Warehouse map</h1>
+<p><a href="{{ path('stock_new') }}"><b>Add stock</b></a></p>
 <table class="records_list">
     <thead>
         <tr>
@@ -42,10 +43,10 @@
                 {% else %}
                     {% if entity['container_location_code'] %} {{ entity['container_location_code'] }} {% endif %}
                 {% endif %}</td>
-            <td><a href="{{ path('stock_edit_qtty', { 'id': entity['id'] }) }}">Inc/Dec</td>
-            <td><a href="{{ path('stock_edit', { 'id': entity['id'] }) }}">Edit</a></td>
-            <td><a href="{{ path('stock_move', { 'id': entity['id'] }) }}">Move</a></td>
-            <td><a href="{{ path('stock_delete', { 'id': entity['id'] }) }}">Delete</a></td>
+            <td><a href="{{ path('stock_edit_qtty', { 'id': entity['id'] }) }}"><b>Inc/Dec</b></a></td>
+            <td><a href="{{ path('stock_edit', { 'id': entity['id'] }) }}"><b>Modify</b></a></td>
+            <td><a href="{{ path('stock_move', { 'id': entity['id'] }) }}"><b>Move</b></a></td>
+            <td><a href="{{ path('stock_delete', { 'id': entity['id'] }) }}"><b>Delete</b></a></td>
         </tr>
     {% endfor %}
     </tbody>
