--- a/src/CB/WarehouseBundle/Resources/views/Location/index.html.twig
+++ b/src/CB/WarehouseBundle/Resources/views/Location/index.html.twig
@@ -41,5 +41,10 @@
                 Create a new entry
             </a>
         </li>
+        <li>
+            <a href="{{ path('default_index') }}">
+                Back to HomePage
+            </a>
+        </li>
     </ul>
     {% endblock %}
